<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="sportify_streamer" >Sportify Streamer</string>
    <string name="super_duo" >Super Duo</string>
    <string name="build_it_bigger" >Build It Bigger</string>
    <string name="xyz_reader" >XYZ Reader</string>
    <string name="capstone" >Capstone</string>
    <string name="header">My Neno Degree Apps!</string>
    <string name="text_on_touch">This button will launch %s apps!</string>

</resources>
