<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vikash.myapplication.MainActivityLaunch"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/header"
            android:gravity="center"
            android:textSize="@dimen/header_text_size" />

        <Button
            android:id="@+id/buttun1"
            android:layout_width="@dimen/burrun_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/buttun_margin"
            android:background="@color/buttun_background"
            android:text="@string/sportify_streamer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/burrun_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/buttun_margin"
            android:background="@color/buttun_background"
            android:text="@string/super_duo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/burrun_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/buttun_margin"
            android:background="@color/buttun_background"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/burrun_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/buttun_margin"
            android:background="@color/buttun_background"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/burrun_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/buttun_margin"
            android:background="@color/buttun_background"
            android:text="@string/capstone" />


</LinearLayout>
